# Configure modules path
SET ( MODULE_PATH "${${PROJECT_NAME}_SOURCE_DIR}/cmake" )
INCLUDE ( "${MODULE_PATH}/modules.cmake" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${LIBPOSE_MODULE}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
IF ( GOOGLE_TEST AND GOOGLE_TEST_PATH )
  INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${GOOGLE_TEST_PATH}/include" )
ENDIF()

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/utils/general" )

# additional files
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC tlpsSolverTest )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC nskpSolverTest )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC hybridSolverTest )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${LIBPOSE_MODULE} )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${TLPSSOLVERTEST_MODULE} ${${TLPSSOLVERTEST_MODULE}_SRC} )
ADD_EXECUTABLE ( ${NSKPSOLVERTEST_MODULE} ${${NSKPSOLVERTEST_MODULE}_SRC} )
ADD_EXECUTABLE ( ${HYBRIDSOLVERTEST_MODULE} ${${HYBRIDSOLVERTEST_MODULE}_SRC} )

# TODO: Library names should be taken from variables
TARGET_LINK_LIBRARIES ( ${TLPSSOLVERTEST_MODULE} ${${TLPSSOLVERTEST_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${NSKPSOLVERTEST_MODULE} ${${NSKPSOLVERTEST_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${HYBRIDSOLVERTEST_MODULE} ${${HYBRIDSOLVERTEST_MODULE}_LNK} )

ADD_CUSTOM_COMMAND ( TARGET ${TLPSSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata1 $<TARGET_FILE_DIR:${TLPSSOLVERTEST_MODULE}>/${TLPSSOLVERTEST_MODULE}_TestData/testdata1 )
ADD_CUSTOM_COMMAND ( TARGET ${NSKPSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata1 $<TARGET_FILE_DIR:${NSKPSOLVERTEST_MODULE}>/${NSKPSOLVERTEST_MODULE}_TestData/testdata1 )
ADD_CUSTOM_COMMAND ( TARGET ${HYBRIDSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata1 $<TARGET_FILE_DIR:${HYBRIDSOLVERTEST_MODULE}>/${HYBRIDSOLVERTEST_MODULE}_TestData/testdata1 )

# Installation instructions for the test module
# Please specify the installation instructions sprcific
# To the architecture the project is being built for.

IF ( UNIX )
	INSTALL (
		TARGETS ${TLPSSOLVERTEST_MODULE} ${NSKPSOLVERTEST_MODULE} ${HYBRIDSOLVERTEST_MODULE}
		RUNTIME DESTINATION bin/${ROOT_PROJECT_NAME}
		LIBRARY DESTINATION lib/${ROOT_PROJECT_NAME}
		ARCHIVE DESTINATION lib/static/${ROOT_PROJECT_NAME}
	)
ELSEIF ( WIN32 )
	INSTALL (
		TARGETS ${TLPSSOLVERTEST_MODULE} ${NSKPSOLVERTEST_MODULE} ${HYBRIDSOLVERTEST_MODULE}
		RUNTIME DESTINATION bin/
		LIBRARY DESTINATION lib/
		ARCHIVE DESTINATION lib/static/
	)
ENDIF()

