# Configure modules path
SET ( MODULE_PATH "${${PROJECT_NAME}_SOURCE_DIR}/cmake" )
INCLUDE ( "${MODULE_PATH}/modules.cmake" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${SPEL_MODULE}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}" )
IF ( GOOGLE_TEST AND GOOGLE_TEST_PATH )
  INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${GOOGLE_TEST_PATH}/include" )
ENDIF()

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}" )

INCLUDE_DIRECTORIES ( "${${PROJECT_NAME}_SOURCE_DIR}/utils/general" )

# additional files
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC tlpsSolverTest )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${SPEL_MODULE} )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${TLPSSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC nskpSolverTest )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${SPEL_MODULE} )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${NSKPSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC ${${PROJECT_NAME}_SOURCE_DIR}/${TINYXML2_PATH}/tinyxml2.cpp )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC hybridSolverTest )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_SRC ../general/projectLoader )

LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${SPEL_MODULE} )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${OpenCV_LIBS} )
LIST ( APPEND ${HYBRIDSOLVERTEST_MODULE}_LNK ${HDF5_LIBRARIES} )

ADD_EXECUTABLE ( ${TLPSSOLVERTEST_MODULE} ${${TLPSSOLVERTEST_MODULE}_SRC} )
ADD_EXECUTABLE ( ${NSKPSOLVERTEST_MODULE} ${${NSKPSOLVERTEST_MODULE}_SRC} )
ADD_EXECUTABLE ( ${HYBRIDSOLVERTEST_MODULE} ${${HYBRIDSOLVERTEST_MODULE}_SRC} )

# TODO: Library names should be taken from variables
TARGET_LINK_LIBRARIES ( ${TLPSSOLVERTEST_MODULE} ${${TLPSSOLVERTEST_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${NSKPSOLVERTEST_MODULE} ${${NSKPSOLVERTEST_MODULE}_LNK} )
TARGET_LINK_LIBRARIES ( ${HYBRIDSOLVERTEST_MODULE} ${${HYBRIDSOLVERTEST_MODULE}_LNK} )

FILE ( GLOB_RECURSE TESTDATA1 ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata1/* )
FILE ( GLOB_RECURSE TESTDATA2 ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata2/* )
FILE ( GLOB_RECURSE TESTDATA3 ${${PROJECT_NAME}_SOURCE_DIR}/utils/general/testdata3/* )

SET ( TESTDATA ${TESTDATA1} ${TESTDATA2} ${TESTDATA3} )

SET ( FROM_DIR ${${PROJECT_NAME}_SOURCE_DIR}/utils/general )

# Copy TPLSSover test data
SET ( TO_DIR $<TARGET_FILE_DIR:${TLPSSOLVERTEST_MODULE}>/TestData )
FOREACH( SRC ${TESTDATA} )
  STRING( REGEX REPLACE "${FROM_DIR}\\/([^ ]*)$" "\\1" SRCFILE ${SRC} )
  GET_FILENAME_COMPONENT( SRCFILENAME ${SRC} NAME ) 
  IF( "${TO_DIR}" STREQUAL "" )
    SET( TO ${SRCFILE} )
  ELSE( "${TO_DIR}" STREQUAL "" )
    SET( TO ${TO_DIR}/${SRCFILE} )
  ENDIF( "${TO_DIR}" STREQUAL "" )
  STRING( REGEX REPLACE "([^ ]*)${SRCFILENAME}$" "\\1" PARENTDIR ${TO} )
  ADD_CUSTOM_COMMAND ( TARGET ${TLPSSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E make_directory ${PARENTDIR} )
  ADD_CUSTOM_COMMAND ( TARGET ${TLPSSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${SRC} ${TO} )
ENDFOREACH( SRC ${FILES} )

# Copy NSKPSover test data
SET ( TO_DIR $<TARGET_FILE_DIR:${NSKPSOLVERTEST_MODULE}>/TestData )
FOREACH( SRC ${TESTDATA} )
  STRING( REGEX REPLACE "${FROM_DIR}\\/([^ ]*)$" "\\1" SRCFILE ${SRC} )
  GET_FILENAME_COMPONENT( SRCFILENAME ${SRC} NAME ) 
  IF( "${TO_DIR}" STREQUAL "" )
    SET( TO ${SRCFILE} )
  ELSE( "${TO_DIR}" STREQUAL "" )
    SET( TO ${TO_DIR}/${SRCFILE} )
  ENDIF( "${TO_DIR}" STREQUAL "" )
  STRING( REGEX REPLACE "([^ ]*)${SRCFILENAME}$" "\\1" PARENTDIR ${TO} )
  ADD_CUSTOM_COMMAND ( TARGET ${NSKPSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E make_directory ${PARENTDIR} )
  ADD_CUSTOM_COMMAND ( TARGET ${NSKPSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${SRC} ${TO} )
ENDFOREACH( SRC ${FILES} )

# Copy HybridSover test data
SET ( TO_DIR $<TARGET_FILE_DIR:${HYBRIDSOLVERTEST_MODULE}>/TestData )
FOREACH( SRC ${TESTDATA} )
  STRING( REGEX REPLACE "${FROM_DIR}\\/([^ ]*)$" "\\1" SRCFILE ${SRC} )
  GET_FILENAME_COMPONENT( SRCFILENAME ${SRC} NAME ) 
  IF( "${TO_DIR}" STREQUAL "" )
    SET( TO ${SRCFILE} )
  ELSE( "${TO_DIR}" STREQUAL "" )
    SET( TO ${TO_DIR}/${SRCFILE} )
  ENDIF( "${TO_DIR}" STREQUAL "" )
  STRING( REGEX REPLACE "([^ ]*)${SRCFILENAME}$" "\\1" PARENTDIR ${TO} )
  ADD_CUSTOM_COMMAND ( TARGET ${HYBRIDSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E make_directory ${PARENTDIR} )
  ADD_CUSTOM_COMMAND ( TARGET ${HYBRIDSOLVERTEST_MODULE} PRE_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${SRC} ${TO} )
ENDFOREACH( SRC ${FILES} )

# Installation instructions for the test module
# Please specify the installation instructions sprcific
# To the architecture the project is being built for.

IF ( UNIX )
	INSTALL (
		TARGETS ${TLPSSOLVERTEST_MODULE} ${NSKPSOLVERTEST_MODULE} ${HYBRIDSOLVERTEST_MODULE}
		RUNTIME DESTINATION bin/${ROOT_PROJECT_NAME}
		LIBRARY DESTINATION lib/${ROOT_PROJECT_NAME}
		ARCHIVE DESTINATION lib/static/${ROOT_PROJECT_NAME}
	)
ELSEIF ( WIN32 )
	INSTALL (
		TARGETS ${TLPSSOLVERTEST_MODULE} ${NSKPSOLVERTEST_MODULE} ${HYBRIDSOLVERTEST_MODULE}
		RUNTIME DESTINATION bin/
		LIBRARY DESTINATION lib/
		ARCHIVE DESTINATION lib/static/
	)
ENDIF()

